--- a/styles/style.css
+++ b/styles/style.css
@@ -225,6 +225,82 @@ nav > ul > li{
 .ribon-description{
     color: #727272;
 }
+/* blogs part */
+.blog-container{
+    margin-top: 80px;
+}
+.top-blogs{
+    margin: 0 auto;
+    width: 80%;
+    padding: 0 25px;
+}
+.section-title{
+    margin-bottom: 40px;
+}
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog img{
+    width: 177px;
+    height: 117px;  
+}
+.blog-info{
+    margin-left: 16px;
+    margin-top: 10px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    font-size: 16px;
+    color: #562EFF;
+    text-decoration: none;
+}
+/* sponsor-part */
+.sponsors{
+    margin: 0 auto;
+    width: 80%;
+    padding: 0 25px;
+}
+.sponsor{
+    margin-top: 70px;
+}
+.sponsor-info{
+    text-align: center;
+}
+.sponsor-title{
+    font-weight: 700;
+    font-size: 45px;
+}
+.sponsor-description{
+    padding: 0 240px;
+    color: #727272;
+}
+.sponsor-banner{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
+/* footer-part */
+.footer{
+    margin: 0 auto;
+    width: 80%;
+    padding: 0 25px;
+}
+.footer-title{
+    text-align: center;
+    margin-top: 100px;
+    color: #424242;
+}
 /* media query */
 /* mobile version */
 @media only screen and (max-width:677px) {
@@ -335,5 +411,31 @@ nav > ul > li{
         flex-direction: column;
         align-items: center;
         gap: 30px;
+    }
+    /* blog part */
+    .blogs{
+        display: block;
+    }
+    .blog{
+        display: flex;
+        flex-direction: column;
+        margin-top: 30px;
+        align-items: center;
+    }
+    .blog-info{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    /* sponsor part */
+    .sponsor-description{
+        padding: 0;
+        margin-top: 15px;
+    }
+    .sponsor-banner{
+        display: flex;
+        margin-top: 50px;
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
     }
 }
